--- a/_biography.pug
+++ b/_biography.pug
@@ -12,6 +12,7 @@ article#biography.card.mx-auto.my-4(v-show="tab==='biography'")
             li このとき初めてプログラミングに触れる
             li 使用言語は HSP
             li 主にゲーム作りを楽しむ
+            li 人間の声を機械的に合成するシステムを作るという野望を持つ
 
         h4.card-subtitle 2015年
         ul
@@ -23,7 +24,7 @@ article#biography.card.mx-auto.my-4(v-show="tab==='biography'")
         h4.card-subtitle 2016年
         ul
             li 3回生からの情報学科への転学科を試みるも失敗
-            li 授業で一応データ構造とアルゴリズムなどを学ぶ
+            li 授業で一応データ構造とアルゴリズムやグラフ理論などを学ぶ
             li C言語での数値計算や電磁界シミュレーションなどを学ぶ
 
         h4.card-subtitle 2017年
@@ -39,6 +40,7 @@ article#biography.card.mx-auto.my-4(v-show="tab==='biography'")
             li 主に自分用に PC で使えるツール作りに勤しむ
             li その後 Web プログラミングに入門し HTML/CSS/JavaScript を学び始める
             li エンジニア学生団体 Tech Garage に誘ってもらい 参加
+            li その後 運営メンバーに加入
 
         h4.card-subtitle 2019年
         ul
@@ -51,4 +53,6 @@ article#biography.card.mx-auto.my-4(v-show="tab==='biography'")
 
         h4.card-subtitle 2020年
         ul
-            li 静的型付けのコンパイル言語に興味を持ち Go Rust などを学び始める
+            li 静的型付けのコンパイル言語の処理速度と安全性に感じ始める
+            li Go で Web のサーバーを書き始める
+            li Rust にハマる
