add: Biography に趣味を追加

--- a/_biography.pug
+++ b/_biography.pug
@@ -56,3 +56,50 @@ article#biography.card.mx-auto.my-4(v-show="tab==='biography'")
             li 静的型付けのコンパイル言語の処理速度と安全性に感じ始める
             li Go で Web のサーバーを書き始める
             li Rust にハマる
+
+    .card-body
+        h1.card-title 趣味
+        h4.card-subtitle プログラミング
+        ul
+            li 高校時代にハマってからずっと熱中している
+            li 便利なツールを作って使うのがとても楽しい
+            li 好きな言語は Python
+
+        h4.card-subtitle 音楽
+        ul
+            li プログラミングを知る前からの趣味
+            li 邦ロックが好き
+            li ポップス ジャズ クラシック アニメ音楽 ゲーム音楽 なども
+            li アコースティックギターを弾く
+            li エレキギター エレキベース ピアノ も少々
+            li 好きなアーティストはたくさんいる
+                ul
+                    li RADWIMPS
+                    li 米津玄師
+                    li 大石昌良
+                    li etc... (敬称略)
+
+        h4.card-subtitle 数学
+        ul
+            li 趣味としての数学
+            li 必ずしも得意ではない
+            li 大学一回生レベルの一般教養数学まで
+            li 好きな公式は 二次方程式の解の公式
+
+        h4.card-subtitle 物理
+        ul
+            li 趣味としての物理
+            li 特に、量子論物理とか素粒子物理とか
+            li 大学で学んだので専門的なことも少しわかる程度
+            li 好きな物理学者 (?) は ジョン・フォン・ノイマン
+
+        h4.card-subtitle ゲーム
+        ul
+            li 好きだけど最近できていない
+            li RPG シミュレーション アクション など
+            li スマホゲームも少し嗜む
+            li 好きなゲームは
+                ul
+                    li ポケットモンスター ルビー＆サファイア
+                    li Fate/Grand Order (スマホ)
+                    li MINECRAFT (PC)
