--- a/_biography.pug
+++ b/_biography.pug
@@ -44,18 +44,33 @@ article#biography.card.mx-auto.my-4(v-show="tab==='biography'")
 
         h4.card-subtitle 2019年
         ul
-            li N高等学校でプログラミングのTAを始める
+            li N高等学校の通学コースでプログラミングのTAを始める
             li 京都大学 卒業
             li 京都大学 大学院 工学研究科 入学
             li プログラミングコンテスト AtCoder をはじめ ハマる
-            li 現在 レーティングは 1000 に到達 (緑)
+            li 2019年末にはレーティングが 800 を越え緑コーダーとなる
             li Hack U 2019 OSAKA 出場
 
         h4.card-subtitle 2020年
         ul
-            li 静的型付けのコンパイル言語の処理速度と安全性に感じ始める
+            li 静的型付けのコンパイル言語の処理速度と安全性に魅力を感じ始める
             li Go で Web のサーバーを書き始める
             li Rust にハマる
+            li LP 制作案件をもらいフロント力が急激に成長する
+            li AtCoder でレーティングが 1200 を越え入水
+            li その後水色と緑を反復横跳びする
+            li ハッカソンイベント「SOCIAL CREATORS」でエンジニアメンターを務める
+
+        h4.card-subtitle 2021年
+        ul
+            li コロナ禍もあり 研究が忙しくなってきてあまり趣味プログラミングができなくなってくる
+            li プログラミングができないストレスからか多数のソシャゲに手を出し始める
+            li VTuber にハマり Vの技術への興味が本格的なものとなる
+            li 物理学会 第76回年次大会 発表
+            li 京都大学 大学院 修了
+            li チームラボ株式会社 入社
+            li パッケージチームに入ったがなぜかフロントエンドの案件で Nuxt を書き始める
+        p ... to be continued
 
     .card-body
         h1.card-title 趣味
@@ -63,7 +78,7 @@ article#biography.card.mx-auto.my-4(v-show="tab==='biography'")
         ul
             li 高校時代にハマってからずっと熱中している
             li 便利なツールを作って使うのがとても楽しい
-            li 好きな言語は Python
+            li 好きな言語は Python, Go, Rust
 
         h4.card-subtitle 音楽
         ul
@@ -77,6 +92,7 @@ article#biography.card.mx-auto.my-4(v-show="tab==='biography'")
                     li RADWIMPS
                     li 米津玄師
                     li 大石昌良
+                    li YOASOBI
                     li etc... (敬称略)
 
         h4.card-subtitle 数学
@@ -89,7 +105,7 @@ article#biography.card.mx-auto.my-4(v-show="tab==='biography'")
         h4.card-subtitle 物理
         ul
             li 趣味としての物理
-            li 特に、量子論物理とか素粒子物理とか
+            li 特に、量子論物理とか相対論とか
             li 大学で学んだので専門的なことも少しわかる程度
             li 好きな物理学者 (?) は ジョン・フォン・ノイマン
 
