--- a/_home.pug
+++ b/_home.pug
@@ -9,11 +9,11 @@ article#home.card.mx-auto.my-4(v-show="tab==='home'")
                 img.mx-1(alt="Twitter Follow" src="https://img.shields.io/twitter/follow/yatabis_tg?label=Follow&style=social")
 
         p.card-text
-            | 京都大学 大学院 工学研究科 電子工学専攻 修士課程 2年
+            | 京都大学 大学院 工学研究科 電子工学専攻 修士
             br
-            | 大阪府在住
+            | 東京都在住
             br
-            | プログラミング大好きマン
+            | ソフトウェアエンジニア
             br
             | アコースティックギター
 
@@ -31,7 +31,7 @@ article#home.card.mx-auto.my-4(v-show="tab==='home'")
                 td: a(href="https://www.facebook.com/shinnosuke.yukawa") 湯川慎之介
             tr
                 td ・GitHub：
-                td: a(href="https://github.com/yatabis") yatabis (八咫烏)
+                td: a(href="https://github.com/yatabis") yukawa @yatabis
             tr
                 td ・Qiita：
                 td: a(href="https://qiita.com/39yatabis") @39yatabis
