--- a/_skills.pug
+++ b/_skills.pug
@@ -3,42 +3,33 @@ article#skills.card.mx-auto.my-4(v-show="tab==='skills'")
         h1.card-title Language
         h4.card-subtitle Python
         ul
-            li 経験 2年
+            li 経験 4年
             li 大体のことはある程度できる
-            li 大学では 実験で得られたデータの分析・可視化に使う
-            li 他にも 作業の自動化・効率化や Webサーバー (API サーバー) など
-            li Web フレームワークとして Django bottle
+            li 用途としては、データの分析・可視化や作業の自動化・効率化、Webサーバー構築、構文解析、自然言語処理、音声情報処理など
             li AtCoder は Python で参加
-            li 代表作は 一問一答bot (LINE bot)
+            li 代表作は 一問一答bot (LINE bot)、ギガ教えてくれる君 (LINE bot)
 
         h4.card-subtitle Go
         ul
-            li 経験 半年程度
+            li 経験 2年程度
             li Web サーバー用言語として勉強を始めた
             li いろいろとできるようになってきた
             li 主に使う Web フレームワークとして Echo
-            li 代表作は Jehanne
+            li 代表作は 一問一答bot (LINE bot)、ReversiOnlineBattle
 
         h4.card-subtitle Rust
         ul
-            li 経験 数ヶ月程度
+            li 経験 1年程度
             li 絶賛勉強中
+            li ちょっとずつわかってきた
             li 安全で高速な言語 すき
-            li Rust を用いて自作コンパイラ製作中
+            li マラソン形式のプログラミングコンテストでは Rust で挑んでみたり
+            li 代表作は KizunaAPI、統計的性質変換を用いたボイスチェンジャー
 
-        h4.card-subtitle HTML/CSS
+        h4.card-subtitle HTML/CSS/JavaScript
         ul
-            li 経験 1年半
-            li Web のフロントとして必須なので勉強した
-            li フロントは苦手なのであまりできない
-            li Web サイトを作るのに最低限の知識
-            li CSS フレームワークとして Bootstrap や Vuetify を使うことも
-            li Pug Sass
-
-        h4.card-subtitle JavaScript
-        ul
-            li 経験1年半
-            li 簡単な Web アプリが作れる程度
-            li Vue.js を勉強しながら書いたりする
-            li この頃はフロント強化中
+            li 経験 3年程度
+            li 絶賛勉強中
+            li Vue.js Nuxt.js
+            li Bootstrap Vuetify
             li 代表作は ProEq
